# Software-Development-Lessons

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LESSONS-LEARNED.md  Makefile  README.md  WORKFLOWS_SETUP.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  pre-commit.yml
src/software_development_lessons/: __init__.py  cli.py
src/software_development_lessons/core/: __init__.py  learning_tracker.py  resource_manager.py
src/software_development_lessons/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_workflow.py
tests/unit/: __init__.py  test_learning_tracker.py  test_resource_manager.py  test_utils.py
