[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "software-development-lessons"
version = "1.0.0"
description = "Ultimate Collection of Modern Development Resources with Python Examples"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["education", "learning", "software-development", "tutorials", "python"]
authors = [
    { name = "Software Development Lessons", email = "dev@example.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",

    # Type Checking
    "mypy>=1.8.0",
    "types-requests>=2.31.0",

    # Linting & Formatting
    "ruff>=0.1.9",
    "black>=23.12.0",

    # Pre-commit
    "pre-commit>=3.6.0",

    # Security
    "pip-audit>=2.6.0",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]

ai-ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "langchain>=0.1.0",
    "openai>=1.6.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

web = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

all = [
    "software-development-lessons[dev,ai-ml,web]",
]

[project.urls]
Documentation = "https://github.com/umitkacar/Software-Development-Lessons#readme"
Issues = "https://github.com/umitkacar/Software-Development-Lessons/issues"
Source = "https://github.com/umitkacar/Software-Development-Lessons"

[project.scripts]
sdl = "software_development_lessons.cli:app"

# ==================== HATCH ====================
[tool.hatch.version]
path = "src/software_development_lessons/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.vscode",
    "/docs",
    "/tests",
    "/.pre-commit-config.yaml",
    "/.gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/software_development_lessons"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "black>=23.12.0",
]

[tool.hatch.envs.default.scripts]
# Testing
test = "pytest -n auto {args:tests}"
test-cov = "pytest --cov=software_development_lessons --cov-report=html --cov-report=term-missing -n auto {args:tests}"
test-cov-xml = "pytest --cov=software_development_lessons --cov-report=xml -n auto {args:tests}"
test-sequential = "pytest {args:tests}"
security-audit = "pip-audit --desc"

# Linting & Formatting
lint = "ruff check {args:.}"
lint-fix = "ruff check --fix {args:.}"
format = "black {args:.}"
format-check = "black --check {args:.}"

# Type Checking
typecheck = "mypy {args:src/software_development_lessons}"

# All Quality Checks
check = [
    "format-check",
    "lint",
    "typecheck",
    "test-cov",
]

# Fix all auto-fixable issues
fix = [
    "format",
    "lint-fix",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# ==================== RUFF ====================
[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable all safe rules by default
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy-specific rules
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific rules
]

ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Conflicts with formatter
    "ANN101",  # Missing type annotation for self (deprecated rule)
    "DTZ005",  # datetime.now() without timezone - acceptable for this use case
    "PLR2004", # Magic value in comparison - acceptable for percentage checks
    "PLC0415", # Import not at top - acceptable for json imports in methods
]

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation
    "D103",    # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
    "PT006",   # pytest.mark.parametrize first argument type
    "FBT001",  # Boolean positional argument in function
    "SIM105",  # Use contextlib.suppress
    "PERF203", # try-except in loop
]
"__init__.py" = [
    "F401",    # Imported but unused
    "D104",    # Missing docstring in public package
]
"src/software_development_lessons/cli.py" = [
    "SIM105",  # Use contextlib.suppress - try-except is clearer here
    "PERF203", # try-except in loop - acceptable for sample data
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["software_development_lessons"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==================== BLACK ====================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["typer", "rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "software_development_lessons.cli"
disallow_untyped_decorators = false

# ==================== PYTEST ====================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
xfail_strict = true

# ==================== COVERAGE ====================
[tool.coverage.run]
branch = true
source = ["software_development_lessons"]
omit = [
    "tests/*",
    "**/__init__.py",
    "**/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if sys.version_info",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "class .*\\bProtocol\\):",
    "except ImportError:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
